# hudak_uloha_3

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
